chore: split packages into api and cli

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
   "cSpell.words": [
     "chrono",
+    "concatcp",
     "Datelike",
     "dotenv",
+    "kmeans",
     "maplit",
     "pigmnts",
     "sprintf",
