--- a/api/assets/default_config.yaml
+++ b/api/assets/default_config.yaml
@@ -54,7 +54,7 @@ capture_interval: 3.0
 # There are three modes:
 # - 'default': Orders the colors by occurrence, with the most dominant color first.
 # - 'brightest': Orders the colors by brightness, with the brightest color first.
-# - 'hues': A special mode where the a set of hues around the most dominant color are sent,
+# - 'hue_shift': A special mode where a set of hues around the most dominant color are sent,
 #    creating a gradient. In this mode, the primary color is not sent first, and may not
 #    be sent at if the amount of colors in the gradient is an even number.
 #
@@ -63,7 +63,7 @@ mode: default
 
 # Determines the amount of degrees of shift to use when selecting hues.
 #
-# This is only used when the mode is set to 'hues'.
+# This is only used when the mode is set to 'hue_shift'.
 #
 # This value is used to shift the primary color to the left and right, creating a gradient.
 # For example, if this is set to 45.0, the primary color will be shifted 45 degrees to the
@@ -72,3 +72,25 @@ mode: default
 #
 # Is optional. If not specified, the default value of 45.0 degrees is used.
 hue_shift: 45.0
+
+# Determines the format in which the colors are sent to Home Assistant.
+#
+# There are two formats:
+# - 'rgb': The colors are sent as a comma-separated list of RGB values.
+#   This is the default format. RGB values consist of three components, red, green, and blue,
+#   and are integers in the range of 0-255 (inclusive).
+#   Example: "255,255,0 255,0,0 0,255,0"
+# - `rgbb`: The colors are sent as a comma-separated list of RGB values, with a brightness
+#   component at the end. All values are integers in the range of 0-255 (inclusive).
+#   Example: "255,255,0,255 255,0,0,255 0,255,0,128"
+# - `hsb`: The colors are sent as a comma-separated list of HSB (hue, saturation, brightness)
+#   values. While this format is more accurate, it is also more difficult to work with in
+#   Home Assistant, and can lead to unexpected results in color accuracy. However, this is
+#   the only format that supports setting a specific brightness for Home Assistant lights,
+#   which the RGB format does not support.
+#   HSB values are in the range of floats 0.0-360.0 for hue, floats 0.0-100.0 for saturation,
+#   and integers 0-255 for brightness (all inclusive).
+#   Example: "60.0,100.0,255 0.0,100.0,255 180.0,100.0,127"
+#
+# Is optional. If not specified, the default format (`rgb`) is used.
+color_format: rgb
